--- a/server/src/questionnaires/emails/tuteur.mjml.ejs
+++ b/server/src/questionnaires/emails/tuteur.mjml.ejs
@@ -18,9 +18,9 @@
                         apprentissage.
                     </mj-text>
                     <mj-text>
-                        Sirius est un nouveau service de l'État qui vise à éclairer les jeunes sur l’apprentissage grâce
-                        aux
-                        avis des apprentis et des entreprises.
+                        <span class="highlight">La Bonne Alternance</span> propose une nouveau service,
+                        <span class="highlight">Sirius</span>, qui vise à éclairer les jeunes sur l’apprentissage grâce
+                        aux avis des apprentis et des entreprises.
                     </mj-text>
                     <mj-text>
                         Ces avis seront diffusés anonymement sur :
