feat(email): rework

--- a/server/emails/common/signature-2.ejs
+++ b/server/emails/common/signature-2.ejs
@@ -1,4 +1,4 @@
 <mj-text padding-top="20px">
-  Nous vous remercions de votre attention, <br />
+  Bien cordialement, <br />
   L’équipe Sirius
 </mj-text>
