--- a/server/emails/account_activated.mjml.ejs
+++ b/server/emails/account_activated.mjml.ejs
@@ -1,7 +1,6 @@
 <mjml>
     <%- include('./common/head.ejs'); %>
     <mj-body background-color="#f9fafc">
-      <%- include('./common/header.ejs'); %>
       <mj-wrapper padding="10px 20px">
         <mj-section background-color="#ffffff" padding-top="0">
           <mj-column>
@@ -9,9 +8,7 @@
               Bonjour <%= data.recipient.firstname %> <%= data.recipient.lastname
               %>,<br />
               <br />
-              Sirius est une plateforme permettant la collecte et la restitution des avis des apprentis.<br />
-              <br />
-              Votre compte est maintenant actif, vous pouvez vous connecter en suivant ce lien :<br />
+              Votre compte Sirius est maintenant actif, vous pouvez vous connecter en suivant ce lien :<br />
             </mj-text>
             <mj-button
               href="<%= utils.getPublicUrl(`/connexion`) %>"
@@ -22,9 +19,9 @@
             </mj-button>
             <mj-text>
               Pour toute question, contactez-nous à l'adresse suivante:
-              sirius@inserjeunes.beta.gouv.fr<br />
+              contact-sirius@inserjeunes.beta.gouv.fr<br />
             </mj-text>
-            <%- include('./common/signature.ejs'); %>
+            <%- include('./common/signature-2.ejs'); %>
           </mj-column>
         </mj-section>
       </mj-wrapper>
