fix(emails): change button color & header img

--- a/server/emails/common/header.ejs
+++ b/server/emails/common/header.ejs
@@ -7,7 +7,7 @@
   >
     <mj-column>
       <mj-image
-        src="<%= utils.getPublicUrl(`/marianne.jpg`) %>"
+        src="<%= utils.getPublicUrl(`/logo.png`) %>"
         width="177px"
       ></mj-image>
     </mj-column>
