--- a/server/emails/confirm_user.mjml.ejs
+++ b/server/emails/confirm_user.mjml.ejs
@@ -16,7 +16,7 @@
           </mj-text>
           <mj-button
             href="<%= utils.getPublicUrl(`/confirmer-utilisateur?token=${data.confirmationToken}`) %>"
-            background-color="#6B46C1"
+            background-color="#000091"
             color="white"
           >
             Lien d'activation
