--- a/server/emails/account_activated.mjml.ejs
+++ b/server/emails/account_activated.mjml.ejs
@@ -15,7 +15,7 @@
             </mj-text>
             <mj-button
               href="<%= utils.getPublicUrl(`/connexion`) %>"
-              background-color="#6B46C1"
+              background-color="#000091"
               color="white"
             >
               Me connecter
