--- a/server/emails/confirm_user.mjml.ejs
+++ b/server/emails/confirm_user.mjml.ejs
@@ -8,10 +8,10 @@
             Bonjour <%= data.recipient.firstname %> <%= data.recipient.lastname
             %>,<br />
             <br />
-            Nous avons bien pris en compte votre demande d’accès à Sirius. <br />
+            Pour des raisons de sécurité, nous avons besoin de vérifier votre adresse email. <br />
             <br />
-            Pour y accéder, activez votre compte en cliquant sur le lien
-            ci-dessous :<br />
+            Faites-le simplement en cliquant sur le lien ci-dessous :
+            <br />
           </mj-text>
           <mj-button
             href="<%= utils.getPublicUrl(`/confirmer-utilisateur?token=${data.confirmationToken}`) %>"
