--- a/ui/src/assets/fonts/fonts.css
+++ b/ui/src/assets/fonts/fonts.css
@@ -1,21 +1,20 @@
 @font-face {
-    font-family: 'Inter';
-    src: url('./Inter-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-  }
-  
+  font-family: "Inter";
+  src: url("./Inter-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
 @font-face {
-    font-family: 'Inter';
-    src: url('./Inter-Medium.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
-  }
-  
+  font-family: "Inter";
+  src: url("./Inter-Medium.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
 @font-face {
-    font-family: 'Inter';
-    src: url('./Inter-Bold.ttf') format('truetype');
-    font-weight: 900;
-    font-style: normal;
-  }
-  
+  font-family: "Inter";
+  src: url("./Inter-Bold.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
+}
